--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oxiom Grok 4 Dashboard</title>
+    <title>Oxiom Grok AI Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f0f0f0; margin: 0; padding: 20px; color: #333; }
@@ -34,10 +34,10 @@
     <div class="grid">
         <div class="box sol-box">
             <div>SOL PRICE</div>
-            <div class="price" id="sol-price">$190.28</div>
+            <div class="price" id="sol-price">Loading...</div>
         </div>
         <div class="box grok-box">
-            <div>GROK 4</div>
+            <div>Grok AI Model</div>
             <div class="price" id="grok-price">$280.08 1.3654SOL</div>
             <div class="change positive" id="grok-change">+194.38% (+0.8654SOL)</div>
         </div>
@@ -51,14 +51,15 @@
     </div>
     
     <script>
-        // Simulated PNL data for wallet 26fVqwyuQn6v1GmPtnN7mTBmNPoWiktNxCcUdQKaFAwW
-        // Based on screenshot trends: Cumulative SOL profit over time (flat start, sharp rise to +0.8654 SOL)
-        // Timestamps: Oct 21-22, 2025; Values in USD equivalent (scaled to match screenshot y-axis)
+        // Simulated PNL data for wallet 26fVqwyuQn6v1GmPtnN7mTBmNPoWiktNxCcUdQKaFAwW (Grok AI trading example)
+        // Based on screenshot trends: Cumulative profit over time (flat start, sharp rise to +0.8654 SOL equivalent)
+        // Timestamps: Oct 21-22, 2025; Values in USD (scaled; real data unavailable via free APIs)
+        // Note: This is placeholder—real PNL requires transaction parsing (e.g., via Helius API with key)
         const pnlData = {
             labels: ['Oct 21 05:49 PM', '', '', 'Oct 22 12:14 AM'],
             datasets: [{
-                label: 'Grok 4 Wallet PNL (SOL)',
-                data: [80, 80, 160, 280.08],  // Simulated: Start low, pump to $280.08 (high PNL)
+                label: 'Grok AI Wallet PNL (SOL)',
+                data: [80, 80, 160, 280.08],  // Simulated: Low start, pump to high profit
                 borderColor: '#00ff85',
                 backgroundColor: 'rgba(0, 255, 133, 0.1)',
                 tension: 0.1,
@@ -67,57 +68,47 @@
         };
 
         const ctx = document.getElementById('pnlChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'line',
-            data: pnlData,
-            options: {
-                responsive: true,
-                scales: {
-                    y: { 
-                        beginAtZero: true,
-                        ticks: { callback: function(value) { return '$' + value; } }
+        if (ctx) {  // Ensure canvas exists
+            new Chart(ctx, {
+                type: 'line',
+                data: pnlData,
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: { 
+                            beginAtZero: true,
+                            ticks: { callback: function(value) { return '$' + value; } }
+                        },
+                        x: { grid: { display: false } }
                     },
-                    x: { grid: { display: false } }
-                },
-                plugins: { legend: { display: false } }  // Hide legend for clean look
-            }
-        });
-
-        // Dynamic price fetching for SOL and Grok 4 (Dexscreener free API)
-        const tokens = {
-            sol: 'So11111111111111111111111111111111111111112',
-            grok: 'Ar8FNn4xzrRZnxyi1uTsMCik9rete5UiU18g2B8apump'  // Verify on Pump.fun
-        };
-
-        async function fetchPrices() {
-            for (const [key, mint] of Object.entries(tokens)) {
-                try {
-                    const resp = await fetch(`https://api.dexscreener.com/latest/dex/tokens/${mint}`);
-                    const data = await resp.json();
-                    const pair = data.pairs?.[0] || {};
-                    const priceUsd = pair.priceUsd || 'N/A';
-                    const priceSol = pair.priceNative || 'N/A';
-                    const change24h = pair.priceChange?.h24 || 0;
-                    const changeSol = (change24h / 100 * parseFloat(priceSol)) || 0;
-
-                    if (key === 'sol') {
-                        document.getElementById('sol-price').innerText = `$${priceUsd}`;
-                    } else {
-                        document.getElementById('grok-price').innerText = `$${priceUsd} ${priceSol}SOL`;
-                        const changeEl = document.getElementById('grok-change');
-                        changeEl.innerText = `${change24h > 0 ? '+' : ''}${change24h.toFixed(2)}% (${changeSol.toFixed(4)}SOL)`;
-                        changeEl.className = `change ${change24h > 0 ? 'positive' : 'negative'}`;
-                        document.getElementById('current-pnl').innerText = `$${priceUsd}`;
-                    }
-                } catch (e) {
-                    console.error(`Error fetching ${key}:`, e);
+                    plugins: { legend: { display: false } }
                 }
+            });
+        } else {
+            console.error('Canvas element not found for PNL chart');
+        }
+
+        // Dynamic price fetching for SOL (Dexscreener free API)
+        // Removed Grok memecoin fetch since focus is Grok AI trading model
+        const solMint = 'So11111111111111111111111111111111111111112';
+
+        async function fetchSolPrice() {
+            try {
+                const resp = await fetch(`https://api.dexscreener.com/latest/dex/tokens/${solMint}`);
+                if (!resp.ok) throw new Error('API response not OK');
+                const data = await resp.json();
+                const pair = data.pairs?.[0] || {};
+                const priceUsd = pair.priceUsd || 'N/A';
+                document.getElementById('sol-price').innerText = `$${priceUsd}`;
+            } catch (e) {
+                console.error('Error fetching SOL price:', e);
+                document.getElementById('sol-price').innerText = 'Error loading price';
             }
         }
 
         // Fetch on load and every 60 seconds
-        fetchPrices();
-        setInterval(fetchPrices, 60000);
+        fetchSolPrice();
+        setInterval(fetchSolPrice, 6000);
     </script>
 </body>
 </html>
