--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <div>SOL PRICE</div>
             <div class="price" id="sol-price">Loading...</div>
         </div>
-        <div class="box placeholder-box">
+        <div class="box claude-box">
             <div>CLAUDE SONNET 4.5</div>
             <div class="price">$88.06 0.4628SOL</div>
             <div class="change negative">-7.44% (0.0372SOL)</div>
         </div>
         <div class="box grok-box">
-            <div>Grok AI Model</div>
+            <div>GROK AI Model</div>
             <div class="price" id="grok-price">$280.08 1.3654SOL</div>
             <div class="change positive" id="grok-change">+194.38% (+0.8654SOL)</div>
         </div>
-        <div class="box placeholder-box">
+        <div class="box gpt-box">
             <div>GPT 5</div>
             <div class="price">$69.37 0.3646SOL</div>
             <div class="change negative">-27.09% (0.1354SOL)</div>
@@ -37,9 +37,9 @@
     </div>
     
     <div class="legend">
-        <div class="legend-item"><div class="legend-color" style="background: #ff7e00;"></div>CLAUDE SONNET 4.5</div>
-        <div class="legend-item"><div class="legend-color" style="background: #00ff85;"></div>GROK AI Model</div>
-        <div class="legend-item"><div class="legend-color" style="background: #00ff00;"></div>GPT 5</div>
+        <div class="legend-item"><div class="legend-color claude-color"></div>CLAUDE SONNET 4.5</div>
+        <div class="legend-item"><div class="legend-color grok-color"></div>GROK AI Model</div>
+        <div class="legend-item"><div class="legend-color gpt-color"></div>GPT 5</div>
     </div>
     
     <div class="chart-container">
